[tool.poetry]
name = "e2e-project"
version = "0.1.0"
description = ""
authors = ["Dmitrii Nikitin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
